--- a/ecommerce/package.json
+++ b/ecommerce/package.json
@@ -14,11 +14,15 @@
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@vite-pwa/nuxt": "^0.1.1",
     "nuxt": "^3.7.4",
+    "typescript": "^5.2.2",
     "vite-plugin-pwa": "^0.16.5",
     "vue": "^3.3.7",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.5.1",
+    "nuxt3": "^3.8.0-28284309.b3d3d7f4",
+    "pinia": "^2.1.7",
     "tailwindcss": "^3.3.4"
   }
 }
